# localic-utils

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: test.yml
examples/: README.md  neutron.rs  neutron_osmosis.rs  osmosis.rs
examples/chains/: neutron_gaia.json
examples/configs/: logs.json
examples/contracts_osmosis/: cw1_whitelist.wasm
src/: error.rs  lib.rs
src/types/: config.rs  contract.rs  ibc.rs  mod.rs  osmosis.rs
src/utils/: fixtures.rs  fs.rs  mod.rs  queries.rs  test_context.rs
src/utils/setup/: astroport.rs  ibc.rs  mod.rs  osmosis.rs  stride.rs  tokens.rs  valence.rs  wasm.rs
