[package]
name = "localic-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
localic-std = { git = "https://github.com/strangelove-ventures/interchaintest", rev = "f326371" }
cosmwasm-std = "1.5.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0"
derive_builder = "0.20.0"
log = "0.4.21"
astroport = "5.1.0"
reqwest = { version = "0.11.20", features = ["rustls-tls"] }
sha2 = "0.10.8"

[dev-dependencies]
env_logger = "0.11.3"