[package]
name = "localic-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
localic-std = { git = "https://github.com/strangelove-ventures/interchaintest", branch = "main" }
cosmwasm-std = "1.5.5"
osmosis-std = "0.25.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
derive_builder = "0.20.0"
log = "0.4.22"
astroport = "5.1.0"
reqwest = { version = "0.11.20", features = ["rustls-tls"] }
sha2 = "0.10.8"
base64 = "0.22.1"

[dev-dependencies]
env_logger = "0.11.3"
hex = "0.4.3"
